# piper-jni

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md  build_debian.sh  build_linux-all.sh  build_linux.sh  build_macos.sh  build_win.cmd  dockerfile  download_test_model.sh  gen_header.sh  pom.xml
.github/workflows/: main.yml
internal/: NativeUtils.java
src/main/java/io/github/givimad/piperjni/: PiperConfig.java  PiperJNI.java  PiperVoice.java
src/main/java/io/github/givimad/piperjni/internal/: JNIRef.java  NativeUtils.java
src/main/java/io/github/jvoice/piperjni/: PiperJNI.java  PiperVoice.java
src/main/java/io/github/jvoice/piperjni/internal/: NativeUtils.java
src/main/java/io/github/jvoiceproject/piperjni/: PiperJNI.java  PiperVoice.java
src/main/java/io/github/jvoiceproject/piperjni/internal/: NativeUtils.java
src/main/native/: io_github_givimad_piperjni_PiperJNI.cpp  io_github_givimad_piperjni_PiperJNI.h  io_github_jvoice_piperjni_PiperJNI.cpp  io_github_jvoice_piperjni_PiperJNI.h  io_github_jvoiceproject_piperjni_PiperJNI.cpp  io_github_jvoiceproject_piperjni_PiperJNI.h  piper.patch  piper_fixes.patch
src/test/java/io/github/givimad/piperjni/: PiperJNITest.java
src/test/java/io/github/jvoice/piperjni/: PiperJNITest.java
src/test/java/io/github/jvoiceproject/piperjni/: PiperJNITest.java
